--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ li a:hover {
 }
 
 body {
-    background-image: url(http://www.spyderonlines.com/images/lines_vertical_wood_background_50564.jpg);*/
+    background-image: url(http://www.spyderonlines.com/images/lines_vertical_wood_background_50564.jpg);
     
 }
 
